fixed inline-block gap

--- a/plugins/bootstrap-multitabs/css/style.css
+++ b/plugins/bootstrap-multitabs/css/style.css
@@ -10,6 +10,7 @@
 .mt-nav-bar .mt-nav{
     display: inline-block;
     vertical-align: top;  /* remove vertical gap from display:inline */
+    margin-left: -1px;    /* remove 1px horizontal gap from display:inline */
     margin-right : -4px;  /* remove 1px horizontal gap from display:inline and 3px ext padding-right, border-right from bootstrap nav*/
 }
 .mt-nav-panel{
